# Industrial_Robotics

./: .gitignore  CMakeLists.txt  README.md  ~$机器人实验报告书.docx  大作业模板.docx  大作业要求.docx
include/: process.hpp  rapid.hpp
output/: path.txt  rapidcode.txt
resources/: 2025年《工业机器人编程与实践》开放式考核题目 (1).docx  2025年《工业机器人编程与实践》开放式考核题目.docx  Planpaint.txt  S-face.sat  Workpiece1.stp  c.rspag  paintinggun.sat  propeller.sat  propellerCC2_1.sat  ~$机器人编程与实践实验指导书(第一次、第二次实验).docx  ~$机器人编程与实践实验指导书(第三次、第四次实验).docx  大作业数据分析.xlsx  工业机器人编程与实践实验指导书(第三次、第四次实验).docx  画画部分代码.txt
resources/第四次数据分析/: P020250521374190022126.xlsx  SignalData200.xlsx  SignalData500.xlsx  SignalData800.xlsx
result/: dengju.mod  dengjuOK.mod  qulv.mod  qulvOK.mod
src/: main.cpp  process.cpp  rapid.cpp
